Improve documentation related to AtkState and AtkStateSet

https://bugzilla.gnome.org/show_bug.cgi?id=740066